Marketing site reworked

--- a/features.html
+++ b/features.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Modulr Features | Industrial ops modules</title>
-  <meta name="description" content="Explore Modulr modules for procurement, allocation, audit trails, and field checkouts. Built for operations teams." />
+  <title>Modulr Features | Inventory and fleet operations</title>
+  <meta name="description" content="Explore Modulr modules for inventory, equipment, fleet, procurement, and audit-ready workflows. Built for service teams." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Modulr<span>THE FUTURE OF BUSINESS OS</span></div>
+        <div class="logo-text">Modulr<span>INVENTORY + FLEET OPS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -35,9 +35,9 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">ModuluR Features</p>
-          <h1>Industrial workflows, tuned for speed.</h1>
-          <p>Modulr powers procurement, allocation, and audit-ready tracking in a single control stack.</p>
+          <p class="pill">Modulr Features</p>
+          <h1>Inventory, equipment, and fleet workflows in one system.</h1>
+          <p>Modulr powers inventory, equipment, and field usage with modular capabilities that scale as you grow.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a demo</a>
             <a class="btn btn-secondary" href="pricing.html">Compare plans</a>
@@ -46,9 +46,9 @@
         <div class="hero-card fade-up delay-2">
           <h3>What teams use daily</h3>
           <ul class="list">
-            <li><span>1</span>Order intake and ETA tracking</li>
-            <li><span>2</span>Project allocation with approvals</li>
-            <li><span>3</span>Mobile check-in and check-out</li>
+            <li><span>1</span>Inventory check-in and check-out</li>
+            <li><span>2</span>Equipment status and assignments</li>
+            <li><span>3</span>Project allocation and returns</li>
             <li><span>4</span>Cycle counts and variance flags</li>
           </ul>
         </div>
@@ -58,25 +58,25 @@
     <section class="section">
       <div class="container">
         <div class="section-heading fade-up">
-          <h2>Core ops modules</h2>
-          <p>Everything you need to keep materials moving and crews aligned.</p>
+          <h2>Core systems</h2>
+          <p>Everything you need to keep inventory, equipment, and crews aligned.</p>
         </div>
         <div class="grid">
           <div class="card fade-up delay-1">
-            <h3>Procurement tracking</h3>
-            <p class="muted">Create inbound orders, capture ETAs, and track open quantities without spreadsheets.</p>
+            <h3>Inventory management</h3>
+            <p class="muted">Track stock states, reservations, and movements across locations.</p>
           </div>
           <div class="card fade-up delay-2">
-            <h3>Allocation and reserves</h3>
-            <p class="muted">Reserve inventory by project and enforce business rules before checkout.</p>
+            <h3>Equipment and fleet</h3>
+            <p class="muted">Manage equipment readiness, vehicle assignments, and service status.</p>
           </div>
           <div class="card fade-up delay-3">
-            <h3>Inventory movements</h3>
-            <p class="muted">Check in, check out, return, and consume stock with full user attribution.</p>
+            <h3>Project operations</h3>
+            <p class="muted">Allocate to jobs, manage returns, and keep field usage accountable.</p>
           </div>
           <div class="card fade-up delay-4">
-            <h3>Item master</h3>
-            <p class="muted">Centralize SKUs, pricing, and category data with role-based governance.</p>
+            <h3>Procurement and catalog</h3>
+            <p class="muted">Track inbound orders and manage a clean, governed item catalog.</p>
           </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
           <p class="muted">Reduce manual steps while keeping approvals, audit trails, and controls in place.</p>
           <ul class="list">
             <li><span>1</span>Auto-reserve stock on receipt based on project rules.</li>
-            <li><span>2</span>Trigger low-stock alerts with configurable thresholds.</li>
+            <li><span>2</span>Toggle low-stock alerts by category or item.</li>
             <li><span>3</span>Capture audit trails for every adjustment and return.</li>
           </ul>
         </div>
@@ -117,12 +117,12 @@
             <p class="muted">Track stock consumption, returns, and losses by job site.</p>
           </div>
           <div class="card fade-up delay-2">
-            <h3>Audit exports</h3>
-            <p class="muted">Export CSV reports for finance, compliance, and leadership reviews.</p>
+            <h3>Role-based dashboards</h3>
+            <p class="muted">KPIs tailored to employee, manager, and admin roles.</p>
           </div>
           <div class="card fade-up delay-3">
-            <h3>Forecast view</h3>
-            <p class="muted">See upcoming demand based on open orders and reservations.</p>
+            <h3>Audit exports</h3>
+            <p class="muted">Export CSV reports for finance, compliance, and leadership reviews.</p>
           </div>
         </div>
       </div>
@@ -149,9 +149,9 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Modulr<span>Industrial inventory</span></div>
+          <div class="logo-text">Modulr<span>Inventory + fleet ops</span></div>
         </div>
-        <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
+        <p class="muted">Inventory, equipment, and fleet operations for service teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
@@ -167,7 +167,7 @@
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@modulr.pro</span>
+        <span class="muted">support@modulr.pro</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
