--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Modulr | Inventory command for modern ops</title>
-  <meta name="description" content="Modulr is an inventory command center for procurement, allocation, and field teams. Real-time stock, audit-ready trails, and rapid deployment." />
+  <title>Modulr | Inventory and fleet operations for service teams</title>
+  <meta name="description" content="Modulr is a modular inventory, equipment, and fleet operations system for service businesses. Real-time stock, audit-ready trails, and fast rollout." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Modulr<span>THE FUTURE OF BUSINESS OS</span></div>
+        <div class="logo-text">Modulr<span>INVENTORY + FLEET OPS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a class="active" href="index.html">Home</a>
@@ -35,10 +35,10 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill"></p>
-          <h1>Stop Losing Inventory. Run It Like a Command Center.</h1>
+          <p class="pill">Inventory + Fleet Command</p>
+          <h1>Run inventory and fleet operations like a command center.</h1>
           <p class="whisper">Built for SMBs who manage real equipment, not spreadsheets.</p>
-          <p>Modulr unifies purchasing, inventory, and field usage into one real-time operations consoleâ€”so nothing goes missing, work never stalls, and every movement is auditable.</p>
+          <p>Modulr unifies inventory, equipment, and vehicle tracking into one real-time operations console so nothing goes missing, work never stalls, and every movement is auditable.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a Live demo</a>
             <a class="btn btn-secondary" href="pricing.html">View Pricing and Plans</a>
@@ -60,25 +60,25 @@
         </div>
         <div class="hero-card fade-up delay-2">
           <h3>Live Operations Console</h3>
-          <p class="muted">See orders, inventory levels, and job allocations across every locationâ€”updated in real time.</p>
+          <p class="muted">See stock, equipment status, and job allocations across every location, updated in real time.</p>
           <div class="grid">
             <div class="card">
-              <strong>Open Orders</strong>
-              <p class="muted">24 open orders, 3 overdue</p>
+              <strong>Equipment Ready</strong>
+              <p class="muted">118 assets ready, 6 due for service</p>
             </div>
             <div class="card">
-              <strong>Available Units</strong>
+              <strong>Available Stock</strong>
               <p class="muted">8,412 units available</p>
             </div>
             <div class="card">
-              <strong>Reserved</strong>
-              <p class="muted">1,160 Reserved across active jobs</p>
+              <strong>Vehicles Active</strong>
+              <p class="muted">22 active, 3 scheduled for return</p>
             </div>
           </div>
           <div class="badge-row">
-            <span class="pill">Full Audit trails</span>
+            <span class="pill">Full audit trails</span>
             <span class="pill">Multi-tenant Architecture</span>
-            <span class="pill">Role based access control</span>
+            <span class="pill">Role-based access control</span>
           </div>
         </div>
       </div>
@@ -87,21 +87,21 @@
     <section class="section">
       <div class="container">
         <div class="section-heading fade-up">
-          <h2>Industrial control, in one view</h2>
+          <h2>Inventory and fleet control, in one view</h2>
           <p>From requisition to check-in, every move is captured with real-time visibility.</p>
         </div>
         <div class="grid">
           <div class="card fade-up delay-1">
-            <h3>Procurement visibility</h3>
-            <p class="muted">Track inbound orders, ETAs, and open quantities with automated alerts.</p>
+            <h3>Equipment readiness</h3>
+            <p class="muted">Track availability, service status, and assignment history.</p>
           </div>
           <div class="card fade-up delay-2">
-            <h3>Allocation that sticks</h3>
-            <p class="muted">Reserve stock to projects and enforce business rules before check-out.</p>
+            <h3>Project allocation</h3>
+            <p class="muted">Reserve stock to projects and enforce business rules before checkout.</p>
           </div>
           <div class="card fade-up delay-3">
-            <h3>Field-hardened checkouts</h3>
-            <p class="muted">Mobile workflows keep crews focused, fast, and accountable.</p>
+            <h3>Fleet visibility</h3>
+            <p class="muted">Know where vehicles are assigned and what they carry.</p>
           </div>
           <div class="card fade-up delay-4">
             <h3>Audit-ready history</h3>
@@ -115,9 +115,9 @@
       <div class="container split">
         <div class="fade-up">
           <h2>Built for the way crews actually work</h2>
-          <p class="muted">Manage inventory across warehouses, jobsites, and field trucks without spreadsheets.</p>
+          <p class="muted">Manage inventory across warehouses, vehicles, and job sites without spreadsheets.</p>
           <ul class="list">
-            <li><span>1</span>Single source of truth for inventory and job allocation.</li>
+            <li><span>1</span>Single source of truth for inventory, equipment, and job allocation.</li>
             <li><span>2</span>Automated rules for reserve, release, and return workflows.</li>
             <li><span>3</span>Project reporting that shows usage, loss, and forecasted needs.</li>
           </ul>
@@ -134,6 +134,10 @@
               <strong>Allocation Health</strong>
               <p class="muted">Catch over-reserved projects</p>
             </div>
+            <div class="card">
+              <strong>Fleet Readiness</strong>
+              <p class="muted">See equipment and vehicle status</p>
+            </div>
           </div>
         </div>
       </div>
@@ -143,11 +147,11 @@
       <div class="container">
         <div class="section-heading fade-up">
           <h2>Security and control by design</h2>
-          <p>Enterprise-grade security with clear roles, audit logs, and data isolation.</p>
+          <p>Enterprise-grade security with clear roles, audit logs, and tenant isolation.</p>
         </div>
         <div class="grid">
           <div class="card fade-up delay-1">
-            <h3>Role based permissions</h3>
+            <h3>Role-based permissions</h3>
             <p class="muted">Control access to purchasing, inventory, and reporting with precision.</p>
           </div>
           <div class="card fade-up delay-2">
@@ -168,35 +172,35 @@
     <section class="section">
       <div class="container">
         <div class="section-heading fade-up">
-          <h2>Plans that scale with your teams</h2>
-          <p>Simple pricing with predictable costs and clear upgrade paths.</p>
+          <h2>Modular pricing that scales with your teams</h2>
+          <p>Start with any core module and add capabilities when they unlock real value.</p>
         </div>
         <div class="pricing">
           <div class="price-card fade-up delay-1">
-            <h3>Starter</h3>
-            <div class="price">$199 <small>/ month</small></div>
+            <h3>Core Modules</h3>
+            <div class="price">From $29 <small>/ month</small></div>
             <ul class="list">
-              <li><span>1</span>Up to 5 locations</li>
-              <li><span>2</span>Core procurement and allocation</li>
-              <li><span>3</span>Email support</li>
+              <li><span>1</span>IMS, OMS, BMS, or FMS</li>
+              <li><span>2</span>Each module works independently</li>
+              <li><span>3</span>Upgrade anytime</li>
             </ul>
           </div>
           <div class="price-card highlight fade-up delay-2">
-            <h3>Growth</h3>
-            <div class="price">$399 <small>/ month</small></div>
+            <h3>Capability Packs</h3>
+            <div class="price">From $25 <small>/ month</small></div>
             <ul class="list">
-              <li><span>1</span>Unlimited locations</li>
-              <li><span>2</span>Advanced audit reporting</li>
-              <li><span>3</span>Priority onboarding</li>
+              <li><span>1</span>Automation, Insights, Audit, Integrations</li>
+              <li><span>2</span>Layered on core systems</li>
+              <li><span>3</span>Built for scale and control</li>
             </ul>
           </div>
           <div class="price-card fade-up delay-3">
-            <h3>Enterprise</h3>
-            <div class="price">Custom</div>
+            <h3>Advanced Solutions</h3>
+            <div class="price">From $79 <small>/ month</small></div>
             <ul class="list">
-              <li><span>1</span>Dedicated success team</li>
-              <li><span>2</span>Custom integrations</li>
-              <li><span>3</span>Security reviews</li>
+              <li><span>1</span>Curated module bundles</li>
+              <li><span>2</span>Operational acceleration</li>
+              <li><span>3</span>Custom enterprise options</li>
             </ul>
           </div>
         </div>
@@ -227,9 +231,9 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Modulr<span>Industrial inventory</span></div>
+          <div class="logo-text">Modulr<span>Inventory + fleet ops</span></div>
         </div>
-        <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
+        <p class="muted">Inventory, equipment, and fleet operations for service teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
@@ -245,7 +249,7 @@
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@modulr.pro</span>
+        <span class="muted">support@modulr.pro</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
