--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Modulr<span>THE FUTURE OF BUSINESS OS</span></div>
+        <div class="logo-text">Modulr<span>INVENTORY + FLEET OPS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -37,7 +37,7 @@
         <div class="fade-up">
           <p class="pill">Signal our team</p>
           <h1>Wire Modulr into your workflow.</h1>
-          <p>Tell us about your inventory setup and we will recommend the best plan, rollout, and integration path.</p>
+          <p>Tell us about your inventory, equipment, and fleet setup and we will recommend the best rollout and integration path.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="#contact-form">Request a demo</a>
             <a class="btn btn-secondary" data-app-link href="/app/login.html">Go to App</a>
@@ -47,7 +47,7 @@
           <h3>We can help with</h3>
           <ul class="list">
             <li><span>1</span>Pricing and rollout plans</li>
-            <li><span>2</span>Inventory migration</li>
+            <li><span>2</span>Inventory and equipment migration</li>
             <li><span>3</span>Security reviews</li>
             <li><span>4</span>Custom integrations</li>
           </ul>
@@ -63,7 +63,7 @@
           <div class="grid">
             <div class="card">
               <strong>Email</strong>
-              <p class="muted">hello@modulr.pro</p>
+              <p class="muted">support@modulr.pro</p>
             </div>
             <div class="card">
               <strong>Phone</strong>
@@ -88,7 +88,7 @@
               <option value="101-250">101-250</option>
               <option value="250+">250+</option>
             </select>
-            <textarea name="message" placeholder="Tell us about your inventory workflow"></textarea>
+            <textarea name="message" placeholder="Tell us about your inventory or fleet workflow"></textarea>
             <button class="btn btn-primary" type="submit">Send request</button>
           </form>
         </div>
@@ -116,9 +116,9 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Modulr<span>Industrial inventory</span></div>
+          <div class="logo-text">Modulr<span>Inventory + fleet ops</span></div>
         </div>
-        <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
+        <p class="muted">Inventory, equipment, and fleet operations for service teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
@@ -134,7 +134,7 @@
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@modulr.pro</span>
+        <span class="muted">support@modulr.pro</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
