--- a/security.html
+++ b/security.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Modulr Security | Industrial-grade protection</title>
+  <title>Modulr Security | Trusted by operations teams</title>
   <meta name="description" content="Security and compliance details for Modulr. Role-based access, audit logs, encryption, and tenant isolation by default." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Modulr<span>THE FUTURE OF BUSINESS OS</span></div>
+        <div class="logo-text">Modulr<span>INVENTORY + FLEET OPS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -36,8 +36,8 @@
       <div class="container hero-grid">
         <div class="fade-up">
           <p class="pill">Security</p>
-          <h1>Industrial-grade protection, from day one.</h1>
-          <p>Modulr protects your data with strong access controls, encryption, and audit trails designed for operations teams.</p>
+          <h1>Security built for real operations.</h1>
+          <p>Modulr protects your data with strong access controls, encryption, and audit trails designed for service teams.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request security brief</a>
             <a class="btn btn-secondary" href="features.html">View features</a>
@@ -122,9 +122,9 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Modulr<span>Industrial inventory</span></div>
+          <div class="logo-text">Modulr<span>Inventory + fleet ops</span></div>
         </div>
-        <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
+        <p class="muted">Inventory, equipment, and fleet operations for service teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
@@ -140,7 +140,7 @@
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@modulr.pro</span>
+        <span class="muted">support@modulr.pro</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
