Marketing site refresh

--- a/features.html
+++ b/features.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Modulr Features | Inventory and fleet operations</title>
-  <meta name="description" content="Explore Modulr modules for inventory, equipment, fleet, procurement, and audit-ready workflows. Built for service teams." />
+  <title>Modulr Features | Inventory and equipment operations</title>
+  <meta name="description" content="Explore Modulr modules for inventory, equipment, procurement, and audit-ready workflows. Built for service teams." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Modulr<span>INVENTORY + FLEET OPS</span></div>
+        <div class="logo-text">Modulr<span>INVENTORY OPERATIONS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -36,7 +36,7 @@
       <div class="container hero-grid">
         <div class="fade-up">
           <p class="pill">Modulr Features</p>
-          <h1>Inventory, equipment, and fleet workflows in one system.</h1>
+          <h1>Inventory and equipment workflows in one system.</h1>
           <p>Modulr powers inventory, equipment, and field usage with modular capabilities that scale as you grow.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a demo</a>
@@ -67,8 +67,8 @@
             <p class="muted">Track stock states, reservations, and movements across locations.</p>
           </div>
           <div class="card fade-up delay-2">
-            <h3>Equipment and fleet</h3>
-            <p class="muted">Manage equipment readiness, vehicle assignments, and service status.</p>
+            <h3>Equipment tracking</h3>
+            <p class="muted">Manage equipment readiness, assignments, and service status.</p>
           </div>
           <div class="card fade-up delay-3">
             <h3>Project operations</h3>
@@ -149,9 +149,9 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Modulr<span>Inventory + fleet ops</span></div>
+          <div class="logo-text">Modulr<span>Inventory operations</span></div>
         </div>
-        <p class="muted">Inventory, equipment, and fleet operations for service teams.</p>
+        <p class="muted">Inventory and equipment operations for service teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
