--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Modulr<span>INVENTORY + FLEET OPS</span></div>
+        <div class="logo-text">Modulr<span>INVENTORY OPERATIONS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -37,7 +37,7 @@
         <div class="fade-up">
           <p class="pill">Signal our team</p>
           <h1>Wire Modulr into your workflow.</h1>
-          <p>Tell us about your inventory, equipment, and fleet setup and we will recommend the best rollout and integration path.</p>
+          <p>Tell us about your inventory and equipment setup and we will recommend the best rollout and integration path.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="#contact-form">Request a demo</a>
             <a class="btn btn-secondary" data-app-link href="/app/login.html">Go to App</a>
@@ -88,7 +88,7 @@
               <option value="101-250">101-250</option>
               <option value="250+">250+</option>
             </select>
-            <textarea name="message" placeholder="Tell us about your inventory or fleet workflow"></textarea>
+            <textarea name="message" placeholder="Tell us about your inventory workflow"></textarea>
             <button class="btn btn-primary" type="submit">Send request</button>
           </form>
         </div>
@@ -116,9 +116,9 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Modulr<span>Inventory + fleet ops</span></div>
+          <div class="logo-text">Modulr<span>Inventory operations</span></div>
         </div>
-        <p class="muted">Inventory, equipment, and fleet operations for service teams.</p>
+        <p class="muted">Inventory and equipment operations for service teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
