--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Modulr | Inventory and fleet operations for service teams</title>
-  <meta name="description" content="Modulr is a modular inventory, equipment, and fleet operations system for service businesses. Real-time stock, audit-ready trails, and fast rollout." />
+  <title>Modulr | Inventory and equipment operations for service teams</title>
+  <meta name="description" content="Modulr is a modular inventory and equipment operations system for service businesses. Real-time stock, audit-ready trails, and fast rollout." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Modulr<span>INVENTORY + FLEET OPS</span></div>
+        <div class="logo-text">Modulr<span>INVENTORY OPERATIONS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a class="active" href="index.html">Home</a>
@@ -35,10 +35,10 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Inventory + Fleet Command</p>
-          <h1>Run inventory and fleet operations like a command center.</h1>
+          <p class="pill">Inventory Command</p>
+          <h1>Run inventory operations like a command center.</h1>
           <p class="whisper">Built for SMBs who manage real equipment, not spreadsheets.</p>
-          <p>Modulr unifies inventory, equipment, and vehicle tracking into one real-time operations console so nothing goes missing, work never stalls, and every movement is auditable.</p>
+          <p>Modulr unifies inventory and equipment tracking into one real-time operations console so nothing goes missing, work never stalls, and every movement is auditable.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a Live demo</a>
             <a class="btn btn-secondary" href="pricing.html">View Pricing and Plans</a>
@@ -71,8 +71,8 @@
               <p class="muted">8,412 units available</p>
             </div>
             <div class="card">
-              <strong>Vehicles Active</strong>
-              <p class="muted">22 active, 3 scheduled for return</p>
+              <strong>Assets Assigned</strong>
+              <p class="muted">22 assigned, 3 due back today</p>
             </div>
           </div>
           <div class="badge-row">
@@ -87,7 +87,7 @@
     <section class="section">
       <div class="container">
         <div class="section-heading fade-up">
-          <h2>Inventory and fleet control, in one view</h2>
+          <h2>Inventory control, in one view</h2>
           <p>From requisition to check-in, every move is captured with real-time visibility.</p>
         </div>
         <div class="grid">
@@ -100,8 +100,8 @@
             <p class="muted">Reserve stock to projects and enforce business rules before checkout.</p>
           </div>
           <div class="card fade-up delay-3">
-            <h3>Fleet visibility</h3>
-            <p class="muted">Know where vehicles are assigned and what they carry.</p>
+            <h3>Jobsite visibility</h3>
+            <p class="muted">Know where equipment is assigned and what it carries.</p>
           </div>
           <div class="card fade-up delay-4">
             <h3>Audit-ready history</h3>
@@ -115,7 +115,7 @@
       <div class="container split">
         <div class="fade-up">
           <h2>Built for the way crews actually work</h2>
-          <p class="muted">Manage inventory across warehouses, vehicles, and job sites without spreadsheets.</p>
+          <p class="muted">Manage inventory across warehouses and job sites without spreadsheets.</p>
           <ul class="list">
             <li><span>1</span>Single source of truth for inventory, equipment, and job allocation.</li>
             <li><span>2</span>Automated rules for reserve, release, and return workflows.</li>
@@ -135,8 +135,8 @@
               <p class="muted">Catch over-reserved projects</p>
             </div>
             <div class="card">
-              <strong>Fleet Readiness</strong>
-              <p class="muted">See equipment and vehicle status</p>
+              <strong>Asset Readiness</strong>
+              <p class="muted">See equipment status at a glance</p>
             </div>
           </div>
         </div>
@@ -231,9 +231,9 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Modulr<span>Inventory + fleet ops</span></div>
+          <div class="logo-text">Modulr<span>Inventory operations</span></div>
         </div>
-        <p class="muted">Inventory, equipment, and fleet operations for service teams.</p>
+        <p class="muted">Inventory and equipment operations for service teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
