--- a/pricing.html
+++ b/pricing.html
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Modulr<span>INVENTORY + FLEET OPS</span></div>
+        <div class="logo-text">Modulr<span>INVENTORY OPERATIONS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -265,7 +265,7 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Modulr<span>Inventory + fleet ops</span></div>
+          <div class="logo-text">Modulr<span>Inventory operations</span></div>
         </div>
         <p class="muted">Modular systems for inventory, equipment, and operations.</p>
       </div>
