Marketing site update

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <div class="fade-up">
           <p class="pill">Signal our team</p>
           <h1>Wire Modulr into your workflow.</h1>
-          <p>Tell us about your inventory and equipment setup and we will recommend the best rollout and integration path.</p>
+          <p>Tell us about your inventory workflow and we will recommend the best modules, rollout, and integration path.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="#contact-form">Request a demo</a>
             <a class="btn btn-secondary" data-app-link href="/app/login.html">Go to App</a>
@@ -47,8 +47,8 @@
           <h3>We can help with</h3>
           <ul class="list">
             <li><span>1</span>Pricing and rollout plans</li>
-            <li><span>2</span>Inventory and equipment migration</li>
-            <li><span>3</span>Security reviews</li>
+            <li><span>2</span>Inventory migration and setup</li>
+            <li><span>3</span>Role-based dashboards</li>
             <li><span>4</span>Custom integrations</li>
           </ul>
         </div>
