--- a/features.html
+++ b/features.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Modulr Features | Inventory and equipment operations</title>
-  <meta name="description" content="Explore Modulr modules for inventory, equipment, procurement, and audit-ready workflows. Built for service teams." />
+  <title>Modulr Features | Inventory operations system</title>
+  <meta name="description" content="Explore Modulr features for inventory, project allocation, procurement, catalog governance, and role-based dashboards. Built for service teams." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -36,8 +36,8 @@
       <div class="container hero-grid">
         <div class="fade-up">
           <p class="pill">Modulr Features</p>
-          <h1>Inventory and equipment workflows in one system.</h1>
-          <p>Modulr powers inventory, equipment, and field usage with modular capabilities that scale as you grow.</p>
+          <h1>Inventory workflows for every role.</h1>
+          <p>Modulr powers inventory and project usage with modular capabilities that scale as you grow.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a demo</a>
             <a class="btn btn-secondary" href="pricing.html">Compare plans</a>
@@ -47,9 +47,9 @@
           <h3>What teams use daily</h3>
           <ul class="list">
             <li><span>1</span>Inventory check-in and check-out</li>
-            <li><span>2</span>Equipment status and assignments</li>
-            <li><span>3</span>Project allocation and returns</li>
-            <li><span>4</span>Cycle counts and variance flags</li>
+            <li><span>2</span>Project allocation and returns</li>
+            <li><span>3</span>Catalog governance and tags</li>
+            <li><span>4</span>Mobile PWA quick actions</li>
           </ul>
         </div>
       </div>
@@ -59,7 +59,7 @@
       <div class="container">
         <div class="section-heading fade-up">
           <h2>Core systems</h2>
-          <p>Everything you need to keep inventory, equipment, and crews aligned.</p>
+          <p>Everything you need to keep inventory, projects, and crews aligned.</p>
         </div>
         <div class="grid">
           <div class="card fade-up delay-1">
@@ -67,16 +67,16 @@
             <p class="muted">Track stock states, reservations, and movements across locations.</p>
           </div>
           <div class="card fade-up delay-2">
-            <h3>Equipment tracking</h3>
-            <p class="muted">Manage equipment readiness, assignments, and service status.</p>
-          </div>
-          <div class="card fade-up delay-3">
             <h3>Project operations</h3>
             <p class="muted">Allocate to jobs, manage returns, and keep field usage accountable.</p>
           </div>
+          <div class="card fade-up delay-3">
+            <h3>Procurement and receiving</h3>
+            <p class="muted">Track inbound orders, ETAs, and open quantities without spreadsheets.</p>
+          </div>
           <div class="card fade-up delay-4">
             <h3>Procurement and catalog</h3>
-            <p class="muted">Track inbound orders and manage a clean, governed item catalog.</p>
+            <p class="muted">Manage categories, tags, and alert rules with clean item data.</p>
           </div>
         </div>
       </div>
@@ -94,11 +94,11 @@
           </ul>
         </div>
         <div class="card fade-up delay-2">
-          <h3>Field-hardened mobile</h3>
+          <h3>PWA-ready mobile</h3>
           <p class="muted">Field crews review availability and complete checkouts in seconds.</p>
           <div class="badge-row">
             <span class="pill">Offline friendly</span>
-            <span class="pill">Fast barcode scans</span>
+            <span class="pill">Installable</span>
             <span class="pill">Instant updates</span>
           </div>
         </div>
@@ -123,6 +123,30 @@
           <div class="card fade-up delay-3">
             <h3>Audit exports</h3>
             <p class="muted">Export CSV reports for finance, compliance, and leadership reviews.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container split">
+        <div class="fade-up">
+          <h2>Modular expansion, ready when you are</h2>
+          <p class="muted">IMS is live today. OMS, BMS, and FMS appear in the app as coming soon so teams know what is next.</p>
+          <ul class="list">
+            <li><span>1</span>Capabilities live in Settings - Capabilities</li>
+            <li><span>2</span>Locked modules explain what is coming</li>
+            <li><span>3</span>No forced bundles</li>
+          </ul>
+        </div>
+        <div class="card fade-up delay-2">
+          <h3>Capabilities roadmap</h3>
+          <p class="muted">Automation, Insights, Audit, and Integrations are structured for expansion without rewrites.</p>
+          <div class="badge-row">
+            <span class="pill">Automation</span>
+            <span class="pill">Insights</span>
+            <span class="pill">Audit</span>
+            <span class="pill">Integrations</span>
           </div>
         </div>
       </div>
