--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Modulr | Inventory and equipment operations for service teams</title>
-  <meta name="description" content="Modulr is a modular inventory and equipment operations system for service businesses. Real-time stock, audit-ready trails, and fast rollout." />
+  <title>Modulr | Inventory operations for service teams</title>
+  <meta name="description" content="Modulr is a modular inventory and equipment operations system for service businesses. Real-time stock, audit-ready trails, and PWA-ready workflows." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -36,9 +36,9 @@
       <div class="container hero-grid">
         <div class="fade-up">
           <p class="pill">Inventory Command</p>
-          <h1>Run inventory operations like a command center.</h1>
+          <h1>Inventory control for crews, managers, and owners.</h1>
           <p class="whisper">Built for SMBs who manage real equipment, not spreadsheets.</p>
-          <p>Modulr unifies inventory and equipment tracking into one real-time operations console so nothing goes missing, work never stalls, and every movement is auditable.</p>
+          <p>Modulr unifies inventory, equipment, and project usage into one real-time operations console so nothing goes missing, work never stalls, and every movement is auditable.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a Live demo</a>
             <a class="btn btn-secondary" href="pricing.html">View Pricing and Plans</a>
@@ -60,25 +60,26 @@
         </div>
         <div class="hero-card fade-up delay-2">
           <h3>Live Operations Console</h3>
-          <p class="muted">See stock, equipment status, and job allocations across every location, updated in real time.</p>
+          <p class="muted">See stock, project allocations, and exceptions across every location, updated in real time.</p>
           <div class="grid">
             <div class="card">
-              <strong>Equipment Ready</strong>
-              <p class="muted">118 assets ready, 6 due for service</p>
+              <strong>Low Stock Alerts</strong>
+              <p class="muted">12 items below threshold</p>
             </div>
             <div class="card">
               <strong>Available Stock</strong>
               <p class="muted">8,412 units available</p>
             </div>
             <div class="card">
-              <strong>Assets Assigned</strong>
-              <p class="muted">22 assigned, 3 due back today</p>
+              <strong>Active Projects</strong>
+              <p class="muted">38 active, 6 overdue returns</p>
             </div>
           </div>
           <div class="badge-row">
             <span class="pill">Full audit trails</span>
             <span class="pill">Multi-tenant Architecture</span>
             <span class="pill">Role-based access control</span>
+            <span class="pill">PWA-ready mobile</span>
           </div>
         </div>
       </div>
@@ -92,20 +93,20 @@
         </div>
         <div class="grid">
           <div class="card fade-up delay-1">
-            <h3>Equipment readiness</h3>
-            <p class="muted">Track availability, service status, and assignment history.</p>
+            <h3>Inventory management</h3>
+            <p class="muted">Track available, reserved, and checked out stock with full history.</p>
           </div>
           <div class="card fade-up delay-2">
             <h3>Project allocation</h3>
             <p class="muted">Reserve stock to projects and enforce business rules before checkout.</p>
           </div>
           <div class="card fade-up delay-3">
-            <h3>Jobsite visibility</h3>
-            <p class="muted">Know where equipment is assigned and what it carries.</p>
+            <h3>Procurement visibility</h3>
+            <p class="muted">Track inbound orders, ETAs, and open quantities without spreadsheets.</p>
           </div>
           <div class="card fade-up delay-4">
-            <h3>Audit-ready history</h3>
-            <p class="muted">Every adjustment is timestamped with a user and source trail.</p>
+            <h3>Catalog governance</h3>
+            <p class="muted">Keep item data clean with categories, tags, and alert rules.</p>
           </div>
         </div>
       </div>
@@ -117,9 +118,9 @@
           <h2>Built for the way crews actually work</h2>
           <p class="muted">Manage inventory across warehouses and job sites without spreadsheets.</p>
           <ul class="list">
-            <li><span>1</span>Single source of truth for inventory, equipment, and job allocation.</li>
-            <li><span>2</span>Automated rules for reserve, release, and return workflows.</li>
-            <li><span>3</span>Project reporting that shows usage, loss, and forecasted needs.</li>
+            <li><span>1</span>Single source of truth for inventory and job allocation.</li>
+            <li><span>2</span>PWA-ready mobile workflows for check-in, checkout, and counts.</li>
+            <li><span>3</span>Role-based dashboards for employee, manager, and admin.</li>
           </ul>
         </div>
         <div class="card fade-up delay-2">
@@ -128,15 +129,15 @@
           <div class="grid">
             <div class="card">
               <strong>Low Stock Watch</strong>
-              <p class="muted">Auto identify hot items</p>
+              <p class="muted">Alert on critical items</p>
             </div>
             <div class="card">
-              <strong>Allocation Health</strong>
-              <p class="muted">Catch over-reserved projects</p>
+              <strong>Counts Due</strong>
+              <p class="muted">See items overdue for counting</p>
             </div>
             <div class="card">
-              <strong>Asset Readiness</strong>
-              <p class="muted">See equipment status at a glance</p>
+              <strong>Role Dashboards</strong>
+              <p class="muted">Employee, manager, and admin views</p>
             </div>
           </div>
         </div>
