--- a/pricing.html
+++ b/pricing.html
@@ -65,6 +65,7 @@
         <div class="section-heading fade-up">
           <h2>Core Modules</h2>
           <p>Each module delivers full value on its own. Add capabilities only when they improve your workflow.</p>
+          <p class="muted">IMS is available now. OMS, BMS, and FMS appear as coming soon in the app.</p>
         </div>
         <div class="pricing modular">
           <div class="price-card fade-up delay-1">
