--- a/security.html
+++ b/security.html
@@ -37,7 +37,7 @@
         <div class="fade-up">
           <p class="pill">Security</p>
           <h1>Security built for real operations.</h1>
-          <p>Modulr protects your data with strong access controls, encryption, and audit trails designed for service teams.</p>
+          <p>Modulr protects your data with role-based access, encryption, and audit trails designed for service teams.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request security brief</a>
             <a class="btn btn-secondary" href="features.html">View features</a>
@@ -46,7 +46,7 @@
         <div class="hero-card fade-up delay-2">
           <h3>Security highlights</h3>
           <ul class="list">
-            <li><span>1</span>Role based access control</li>
+            <li><span>1</span>Role-based access (employee, manager, admin)</li>
             <li><span>2</span>Tenant data isolation</li>
             <li><span>3</span>Immutable audit trails</li>
             <li><span>4</span>Encrypted backups</li>
