--- a/item-master.html
+++ b/item-master.html
@@ -123,7 +123,20 @@
             <input id="searchBox" type="text" placeholder="Search by code or name..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
           </div>
           <table id="itemTable">
-            <thead><tr><th>Code</th><th>Name</th><th>Category</th><th>Unit Price</th><th>Actions</th></tr></thead>
+            <thead>
+              <tr>
+                <th>Code</th>
+                <th>Name</th>
+                <th>Category</th>
+                <th>Unit Price</th>
+                <th>Material</th>
+                <th>Shape</th>
+                <th>Brand</th>
+                <th>Notes</th>
+                <th>Reorder</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
             <tbody></tbody>
           </table>
         </section>
