Catalog hard refresh button added

--- a/item-master.html
+++ b/item-master.html
@@ -39,7 +39,10 @@
     <main class="main">
       <header class="topbar">
         <h1>Catalog</h1>
-        <div class="topbar-right"><button id="logoutBtn" class="muted">Logout</button></div>
+        <div class="topbar-right">
+          <button id="catalogRefreshBtn" class="muted" type="button">Hard Refresh</button>
+          <button id="logoutBtn" class="muted" type="button">Logout</button>
+        </div>
       </header>
 
       <section class="card" style="margin-bottom:12px;">
